Bug 131346 - Navigator content tree causes freeze when a heading is collapsed and key is pressed that has no search match
Summary: Navigator content tree causes freeze when a heading is collapsed and key is p...
Status: RESOLVED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: Writer (show other bugs)
Version:
(earliest affected)
4.3 all versions
Hardware: All All
: medium normal
Assignee: Jim Raykowski
URL:
Whiteboard: target:7.0.0
Keywords:
Depends on:
Blocks:
 
Reported: 2020-03-15 04:57 UTC by Jim Raykowski
Modified: 2020-04-20 01:57 UTC (History)
1 user (show)

See Also:
Crash report or crash signature:


Attachments
bug report doc to repro freeze (11.62 KB, application/vnd.oasis.opendocument.text)
2020-03-15 04:57 UTC, Jim Raykowski
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Jim Raykowski 2020-03-15 04:57:23 UTC
Created attachment 158686 [details]
bug report doc to repro freeze

Hi All,

Here is a bug that seems to have gone unnoticed since the dawn of LO. I can repro this back to the oldest version in 4.3 bibisect repository. It may even be inherited from OOo.

Attached is file with steps to repro.
Comment 1 Julien Nabet 2020-03-15 19:41:07 UTC
On pc Debian x86-64 with master sources updated today, I could reproduce this.
Comment 2 Commit Notification 2020-04-02 03:42:07 UTC
Jim Raykowski committed a patch related to this issue.
It has been pushed to "master":

https://git.libreoffice.org/core/commit/3ea506eb7a0b11323569956255475dfbb113a6a5

tdf#131346 Fix SvTreeListBox::NextSearchEntry

It will be available in 7.0.0.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.