tdf#131346 Fix SvTreeListBox::NextSearchEntry

...so QuickSearch doesn't continous loop

Change-Id: I9cb93517ba8c9ec961e56e8c162304c83c99d08b